IT/gateway/httproutes/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    app.kubernetes.io/part-of: idp
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: argocd-server-demo
    app.kubernetes.io/component: ui
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    description: 'HTTPRoute for ArgoCD UI and API'
    contact: platform-team
    documentation: https://argo-cd.readthedocs.io/
spec:
  parentRefs:
    - name: idp-gateway
      namespace: kube-system
  hostnames:
    - "argocd.${DNS_SUFFIX}"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 443
