IT/gateway/httproutes/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana-demo
    app.kubernetes.io/component: visualization
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    description: 'HTTPRoute for Grafana dashboards'
    contact: platform-team
    documentation: https://grafana.com/docs/
spec:
  parentRefs:
    - name: idp-gateway
      namespace: kube-system
  hostnames:
    - "grafana.${DNS_SUFFIX}"
  rules:
    - backendRefs:
        - name: prometheus-grafana
          port: 80
