IT/gateway/httproutes/redirect-http-to-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: kube-system
spec:
  parentRefs:
    - name: idp-gateway
      sectionName: http
  hostnames:
    - "*.${DNS_SUFFIX}"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
