IT/gateway/httproutes/sonarqube-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarqube
  namespace: cicd
  labels:
    app.kubernetes.io/part-of: idp
    app.kubernetes.io/name: sonarqube
    app.kubernetes.io/instance: sonarqube-demo
    app.kubernetes.io/component: code-quality
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    description: 'HTTPRoute for SonarQube code quality platform'
    contact: platform-team
    documentation: https://docs.sonarqube.org/
spec:
  parentRefs:
    - name: idp-gateway
      namespace: kube-system
  hostnames:
    - "sonarqube.${DNS_SUFFIX}"
  rules:
    - backendRefs:
        - name: sonarqube-sonarqube
          port: 9000
